--- a/web.html
+++ b/web.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS  -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <!--navigation bar-->
+    <!--navigation bar added-->
     <nav class="navbar navbar-expand nav-pills nav-stacked  navbar-light bg-light">
       <a class="navbar-brand" href="#"><img src="img/Capture.JPG" alt=""/></a>
       <button
